test/neg/neg-serial6.errc
Arguments to UPCXX_SERIALIZED_FIELDS must either be Serializable or arrays of Serializable elements
